added function for retreiving and setting local storage of high scores

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-#startButtonContainer {
-display: block;
-}
+
 
 #answerContainer {
 display: block;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
 }
