--- a/style.css
+++ b/style.css
@@ -10,3 +10,35 @@ ul {
     list-style-type: none;
     padding: 0;
 }
+
+#highScores {
+    text-decoration: underline;
+    color: purple;
+    cursor: pointer;
+}
+
+span {
+    cursor: pointer;
+}
+
+.modal {
+    display: none;  
+  }
+  
+.modal-header {
+    padding: 2px 16px;
+    background-color: #586994;
+    color: white;
+  }
+  
+.modal-body {padding: 2px 16px;}
+  
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  }
